--- a/.travis.yml
+++ b/.travis.yml
@@ -2,26 +2,25 @@
 
 language: python
 cache: pip
-python: "3.6"
+
 env:
-  - ANSIBLE_VERSION=2.4.0.0
-  - ANSIBLE_VERSION=2.4.1.0
-  - ANSIBLE_VERSION=2.4.2.0
-  - ANSIBLE_VERSION=2.4.3.0
   - ANSIBLE_VERSION=2.4.4.0
-  - ANSIBLE_VERSION=2.5.0
-  - ANSIBLE_VERSION=2.5.1
-  - ANSIBLE_VERSION=2.5.2
-  - ANSIBLE_VERSION=2.5.3
-  - ANSIBLE_VERSION=2.5.4
-  - ANSIBLE_VERSION=2.5.5
+  - ANSIBLE_VERSION=2.5.15
+  - ANSIBLE_VERSION=2.6.19
+  - ANSIBLE_VERSION=2.7.13
+  - ANSIBLE_VERSION=2.8.5
   - ANSIBLE_VERSION=latest
+
 install:
-  - if [ "${ANSIBLE_VERSION}" = "latest" ]; then pip3 install -U ansible ansible-lint; else pip3 install -U ansible==${ANSIBLE_VERSION} ansible-lint; fi
+  - if [ "${ANSIBLE_VERSION}" = "latest" ]; then pip3 install -U ansible ansible-lint ansible-review; else pip3 install -U ansible==${ANSIBLE_VERSION} ansible-lint ansible-review; fi
+
 script:
   - ansible-lint --version
+  - ansible-review --version
   - ansible-lint -v .
   - ansible --version
-  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+  - git ls-files | grep -Ei '^[^[:punct:]].+.(yaml|yml)$' | xargs ansible-review -q
+  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check -e 'ansible_python_interpreter=/usr/bin/python3'
+
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
