--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 dependencies: []
 
 galaxy_info:
-  role_name: repo-ius
+  role_name: repo_ius
   author: Kirill Sevriugin
   description: Ansible role for IUS repository
   license: MIT
