Add a mode to the repo files.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,6 +12,7 @@
   template:
     src: "{{ item }}"
     dest: "{{ ius_repo_files_path }}/{{ item }}"
+    mode: 0644
   with_items:
     - "ius.repo"
     - "ius-testing.repo"
