--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,9 +13,11 @@ galaxy_info:
   platforms:
     - name: EL
       versions:
+        - 6
         - 7
   galaxy_tags:
     - ius
     - repository
 
-dependencies: []
+dependencies:
+  - geerlingguy.repo_epel
