--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,21 +10,21 @@
 - name: "Add IUS release repository."
   become: true
   yum:
-    name: "{{ iius_repo_url }}/ius-release-el{{ ansible_distribution_major_version }}.rpm"
+    name: "{{ ius_repo_url }}/ius-release-el{{ ansible_distribution_major_version }}.rpm"
   register: ius_repo
   when: ius_enable
 
 - name: "Add IUS testing repository."
   become: true
   yum:
-    name: "{{ iius_repo_url }}/ius-testing-{{ ansible_distribution_major_version }}.rpm"
+    name: "{{ ius_repo_url }}/ius-testing-{{ ansible_distribution_major_version }}.rpm"
   register: ius_testing
   when: ius_enable_testing
 
 - name: "Add IUS testing repository."
   become: true
   yum:
-    name: "{{ iius_repo_url }}/ius-testing-{{ ansible_distribution_major_version }}.rpm"
+    name: "{{ ius_repo_url }}/ius-testing-{{ ansible_distribution_major_version }}.rpm"
   register: ius_testing
   when: ius_enable_archive
 
