--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,10 @@
     timeout: 2
   when: proxy_url | length > 0
 
+- name: "DEBUG: print distribution major version number."
+  debug:
+    var: ansible_distribution_major_version
+
 - name: "Add IUS release repository."
   become: true
   yum:
