--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install test dependencies.
-        run: pip3 install ansible molecule[docker] docker testinfra
+        run: pip3 install molecule[docker,lint] docker pytest-testinfra
 
       - name: Run Molecule tests.
         run: molecule test
