Update pre-commit linter version.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,7 @@
 
 galaxy_info:
   role_name: repo_ius
+  namespace: deekayen
   author: Kirill Sevriugin
   description: Ansible role for IUS repository.
 
