--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,8 +2,8 @@
 
 repos:
   - repo: https://github.com/ansible/ansible-lint.git
-    rev: v5.0.0
+    rev: v5.0.12
     hooks:
       - id: ansible-lint
         files: \.(yaml|yml)$
-        args: [--exclude=/Users/deekayen/.ansible, .]
+        args: [--exclude=/Users/deekayen/.ansible]
